@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.1.2"
 #define RUBY_RELEASE_DATE "2014-09-15"
-#define RUBY_PATCHLEVEL 239
+#define RUBY_PATCHLEVEL 240
 
 #define RUBY_RELEASE_YEAR 2014
 #define RUBY_RELEASE_MONTH 9
